force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Provider_Change_Request__c/Provider_Change_Request__c.object-meta.xml
<CustomObject>
    <label>Provider Change Request</label>
    <nameField>
        <label>Provider Change Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider_Change_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>