force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Provider_Change_Request__c/fields/Duplicate_Check_Result__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Check_Result__c</fullName>
    <label>Duplicate Check Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Possible Duplicate Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>