force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Provider_Change_Request__c/fields/Duplicate_Match__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Match</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Provider_Change_Requests (Duplicate Match)</relationshipLabel>
    <relationshipName>Provider_Change_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>