force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Provider_Change_Request__c/fields/Emergency_Justification__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Justification__c</fullName>
    <label>Emergency Justification</label>
    <type>TextArea</type>
</CustomField>