force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Provider_Change_Request__c/fields/External_Validation_Result__c.field-meta.xml
<CustomField>
    <fullName>External_Validation_Result__c</fullName>
    <label>External Validation Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Could Not Verify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>