force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Provider_Change_Request__c/fields/Field_Being_Changed__c.field-meta.xml
<CustomField>
    <fullName>Field_Being_Changed__c</fullName>
    <label>Field Being Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Languages</fullName>
            </value>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Telehealth</fullName>
            </value>
            <value>
                <fullName>Accepting New Patients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>