force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Provider_Change_Request__c/fields/Is_Emergency__c.field-meta.xml
<CustomField>
    <fullName>Is_Emergency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Emergency</label>
    <type>Checkbox</type>
</CustomField>