force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Provider_Change_Request__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>