force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Provider_Change_Request__c/fields/Submitter_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Name__c</fullName>
    <label>Submitter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>