force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Provider_Change_Request__c/fields/Validation_Source__c.field-meta.xml
<CustomField>
    <fullName>Validation_Source__c</fullName>
    <label>Validation Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>