force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Provider_Change_Request__c/listViews/Provider_Data_Stewards_Provider_Change_Request.listView-meta.xml
<ListView>
    <fullName>Provider_Data_Stewards_Provider_Change_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Provider Data Stewards</label>
    <queue>Provider_Data_Stewards</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>